--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "apollo-upload-client": "^14.1.3",
     "axios": "^0.21.0",
     "graphql": "^15.4.0",
     "prop-types": "^15.7.2",
